--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="sell">SELL</string>
     <string name="youhave">You have_______________,value teksten slettes når vi får db på plass</string>
     <string name="hardcoded_text">Hardcoded text</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
